--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@sentry/react": "^10.23.0",
+    "@sentry/tracing": "^7.120.4",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.0",
     "formik": "^2.4.6",
